# Exchange-Rate-Alarms

./: README.md
ExchangeRates/: CMakeLists.txt  main.cpp  main.qml  res.qrc
ExchangeRates/qml/: NotificationWindow.qml
ExchangeRates/res/: icon.icns
ExchangeRates/src/: appcontroller.cpp  appcontroller.h  currencymodel.cpp  currencymodel.h  httprequestworker.cpp  httprequestworker.h
